@@ -3,3 +3,4 @@ from handle_message import HandleMessageTest
 from rule import RuleTest
 from issue import IssueTest
 from sla import SLATest
+from notification import NotificationTest
